# langgraph-email-automation

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLANO_DE_DESENVOLVIMENTO.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  run_api.py
agents/: analyze_email.py  generate_response.py  read_email.py  send_email.py
api/: auth_google.py  routes.py  schemas.py
app/: __init__.py
backend/app/: alembic.ini  cli.py  main.py
backend/app/alembic/: env.py
backend/app/api/endpoints/: emails.py  regras.py  respostas.py
backend/app/core/: alerts.py  config.py  logging.py  metrics.py
backend/app/db/: base.py  database.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: models.py
backend/app/schemas/: filters.py  schemas.py
backend/app/tests/: __init__.py  conftest.py  test_emails.py
db/: __init__.py  crud.py  database.py  init_db.py  models.py
doc/: AGENDADOR_EMAILS.md  BACKEND_FASTAPI.md  BANCO_DE_DADOS.md  CONFG_ENV.md  DEPLOY.md  DOCKER.md  ESTRUTURA_DE_PROJETO_REGERADA.md  ESTRUTURA_DOC.md  FRONTEND_PAINEL.md  IA_PROMPTS.md  INTEGRACAO_GMAIL.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx
frontend/src/styles/: index.css
src/: agents.py  prompts.py
tests/: test_db.py
