[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipass-email-automation"
version = "1.0.0"
authors = [
    { name="Luis Carlos", email="author@example.com" },
]
description = "Automação de emails com IA"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = false 